--- a/javaScript/package.json
+++ b/javaScript/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "jest": "^28.1.3"
+    "jest": "^28.1.3",
+    "typescript": "^4.8.4"
   }
 }
