--- a/javaScript/package.json
+++ b/javaScript/package.json
@@ -15,7 +15,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "jest": "^28.1.3",
+    "@typescript-eslint/eslint-plugin": "^5.41.0",
+    "eslint": "^8.26.0",
+    "eslint-config-standard-with-typescript": "^23.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.3.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "nodemon": "^2.0.20",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.8.4"
   }
 }
