--- a/javaScript/package.json
+++ b/javaScript/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "nodemon": "^2.0.20",
     "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   }
 }
