--- a/javaScript/package.json
+++ b/javaScript/package.json
@@ -2,25 +2,27 @@
   "name": "logicallogicalproblems",
   "version": "1.0.0",
   "description": "solving logical problems",
-  "type": "module",
-  "jest": {
-    "verbose": true
-  },
-  "scripts": {
-    "test": "jest"
-  },
   "directories": {
     "test": "test"
+  },
+  "scripts": {
+    "build": "tsc",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.19.6",
+    "@babel/preset-env": "^7.19.4",
+    "@types/jest": "^29.2.0",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
+    "babel-jest": "^29.2.2",
     "eslint": "^8.26.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.3.0",
     "eslint-plugin-promise": "^6.1.1",
+    "jest": "^29.2.2",
     "nodemon": "^2.0.20",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
